<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="zzafa015.uottawa.ca.tipcalculator.MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true" android:layout_alignParentStart="true">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/enter_amount"
                    android:layout_height="wrap_content" android:id="@+id/lbl_Amount" android:layout_width="150dp"/>
            <TextView
                    android:layout_height="wrap_content" android:id="@+id/lbl_currency" android:layout_weight="1"
                    android:textIsSelectable="false"
                    android:text="£" android:layout_width="10dp"/>
            <EditText
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_amount" android:layout_weight="1" android:layout_width="175dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" android:id="@+id/lbl_tip"
                    android:text="@string/enter_tip"/>
            <EditText
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="10"
                    android:id="@+id/edit_tip" android:layout_weight="1"/>
            <Button
                    android:id="@+id/btn_" android:layout_weight="1"
                    style="@android:style/Widget.Material.Button"
                    android:background="@drawable/ic_star_half_black_24dp" android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/enter_persons"
                    android:layout_height="match_parent" android:id="@+id/lbl_persons" android:layout_width="150dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_persons" android:layout_weight="1"
                android:hint="1" />
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/lbl_Sum"
                    android:textAppearance="@android:style/TextAppearance.Material.Large"/>
            <Button
                    android:text="@string/summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btn_sum"
                android:onClick="onSummaryClick" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
